--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -1,5 +1,4 @@
-@config "../tailwind.dashbord.config.ts";
-
+@config "../tailwind.dashboard.config.ts";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
